@@ -3,7 +3,7 @@
 package edu.colorado.phet.acidbasesolutions.module.customsolution;
 
 import edu.colorado.phet.acidbasesolutions.controls.CustomSolutionControl;
-import edu.colorado.phet.acidbasesolutions.controls.ToolsControl.FewerToolsControl;
+import edu.colorado.phet.acidbasesolutions.controls.ToolsControl;
 import edu.colorado.phet.acidbasesolutions.model.ABSModel;
 import edu.colorado.phet.common.phetcommon.model.Resettable;
 import edu.colorado.phet.common.phetcommon.view.ControlPanel;
@@ -17,7 +17,7 @@ public class CustomSolutionControlPanel extends ControlPanel {
 
     public CustomSolutionControlPanel( Resettable resettable, ABSModel model ) {
         addControlFullWidth( new CustomSolutionControl( model ) );
-        addControlFullWidth( new FewerToolsControl( model ) );
+        addControlFullWidth( new ToolsControl( model ) );
         addResetAllButton( resettable );
     }
 }
