@@ -1,3 +1,5 @@
+8/10/10 make the dipped color on the pH paper bleed up above the surface of the solution
+8/10/10 add "conductivity tester" feature to Custom Solution tab
 8/9/10 display brightness value on conductivity tester (strong=bright, weak=dim)
 8/9/10 add simple wires connecting probes to connectivity tester
 8/9/10 add dummy nodes for conductivity tester probes, implement dragging
